Fix z-index issue in container

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -6,10 +6,12 @@ body {
 }
 
 .banner {
+  position: relative;
+  z-index: -20;
   width: 100%;
   height: 600px;
-  // clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 85%);
-  // z-index: -10;
+  clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 85%);
+
 }
 
 
